--- a/fw/MainWindow.xaml
+++ b/fw/MainWindow.xaml
@@ -78,7 +78,7 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    <WindowsFormsHost x:Name="HostGL"/>
+                    <local:Map2D />
                 </Grid>
             </TabItem>
         </TabControl>
